syntax = "proto3";

package kg.musabaev.tutorial;

option java_multiple_files = true;
option java_package = "kg.musabaev.tutorial.grpc";
option java_outer_classname = "TutorialProto";

// The greeting service definition.
service TutorialService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
  }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
